# Bake-Groups-Tool

./: .gitignore  CMakeLists.txt  README.md
Bake_Groups/: bg_core.py  bg_final_export.py  bg_gt_matcher.py  bg_localization.py  bg_main_window.py  bg_math_core.cpp  bg_mixins.py  bg_structure_analyzer.py  bg_structure_analyzer_bbox.py  bg_ui_widgets.py  bg_update.py  bg_version.py  bg_worker_hp.py  bg_worker_lp.py  install_shelf.py  launcher.py  update_manifest.json
Bake_Groups/localization/: en.json  ja.json  languages.json  ru.json  zh-CN.json
_Documentation/: Analyze_HP_Flow_RU.drawio  Bake Groups User Manual JA.md  Bake Groups User Manual ZH-CN.md  Installation EN.md  User_Manual_Bake_Groups_EN.md  User_Manual_Bake_Groups_RU.md  Руководство пользователя Bake Groups RU.md  Установка RU.md
tools/: build_math_core.ps1
